--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -1,4 +1,4 @@
-example.property: "I AM IN Tsds"
+example.property: "I AM IN dssdasds"
 spring.jpa.database: "POSTGRESQL"
 spring.datasource.platform:  "postgres"
 spring.jpa.show-sql: "true"
