--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -1,4 +1,4 @@
-example.property: 123dssdasds"
+example.property: dsds"
 spring.jpa.database: "POSTGRESQL"
 spring.datasource.platform:  "postgres"
 spring.jpa.show-sql: "true"
